[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/WeaponView.gd" type="Script" id=1]
[ext_resource path="res://scenes/Gun.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.997512 )
colors = PoolColorArray( 0.476562, 0.476562, 0.476562, 1, 0.851562, 0.851562, 0.851562, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 1024

[sub_resource type="CubeMesh" id=1]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 1024.0
margin_bottom = 610.0
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 1024.0
margin_bottom = 610.0
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 556.0
margin_right = 991.0
margin_bottom = 581.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ice_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 516.0
margin_right = 991.0
margin_bottom = 541.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earth_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 476.0
margin_right = 991.0
margin_bottom = 501.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fusion_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 436.0
margin_right = 991.0
margin_bottom = 461.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poison_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 396.0
margin_right = 991.0
margin_bottom = 421.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wind_text_input" type="TextEdit" parent="CanvasLayer/Control"]
margin_left = 909.0
margin_top = 356.0
margin_right = 991.0
margin_bottom = 381.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 971.423
margin_top = 21.0278
margin_right = 1006.42
margin_bottom = 41.0278
text = "Exit"

[node name="fire_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 356.0
margin_right = 890.0
margin_bottom = 381.0
valign = 1

[node name="ice_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 396.366
margin_right = 890.0
margin_bottom = 421.366
valign = 1

[node name="earth_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 436.0
margin_right = 890.0
margin_bottom = 461.0
valign = 1

[node name="fusion_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 476.366
margin_right = 890.0
margin_bottom = 501.366
valign = 1

[node name="poison_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 516.366
margin_right = 890.0
margin_bottom = 541.366
valign = 1

[node name="wind_label" type="Label" parent="CanvasLayer/Control"]
margin_left = 728.0
margin_top = 556.0
margin_right = 890.0
margin_bottom = 581.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bullet_velocity_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 570 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="fire_rate_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 370 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="recoil_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 410 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="handling_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 450 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="movement_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 490 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="reload_mesh" type="MeshInstance2D" parent="CanvasLayer"]
position = Vector2( 220, 530 )
scale = Vector2( 200, 13.634 )
mesh = SubResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 1000 )
transparent_bg = true
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15, 0, 0 )
fov = 60.0
near = 0.01
far = 1000.0

[node name="Gun" parent="Viewport" instance=ExtResource( 2 )]
